--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
   },
   "devDependencies": {
     "@iconify/json": "^2.1.17",
+    "@nuxt/kit-edge": "^3.0.0-27460489.53fbca7",
     "@unocss/nuxt": "^0.29.3",
     "@unocss/preset-icons": "^0.29.3",
     "@unocss/preset-mini": "^0.29.3",
     "@unocss/preset-uno": "^0.29.3",
     "@unocss/preset-web-fonts": "^0.29.3",
+    "@vueuse/core": "^8.1.1",
+    "@vueuse/nuxt": "^8.1.1",
+    "buffer": "^6.0.3",
     "nuxt3": "latest"
   },
   "dependencies": {
-    "@nuxt/ui-templates": "npm:@nuxt/ui-templates-edge@0.0.0-27455683.83d2457"
+    "@headlessui/vue": "^1.5.0",
+    "@nuxt/ui-templates": "npm:@nuxt/ui-templates-edge@0.0.0-27455683.83d2457",
+    "@nuxtjs/proxy": "^2.1.0",
+    "@pinia/nuxt": "^0.1.8",
+    "cookie-universal-nuxt": "^2.1.5",
+    "pinia": "^2.0.12"
   }
 }
