--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vueuse/core": "^8.1.1",
     "@vueuse/nuxt": "^8.1.1",
     "buffer": "^6.0.3",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.4",
     "nuxt3": "latest"
   },
   "dependencies": {
@@ -24,6 +26,7 @@
     "@nuxtjs/proxy": "^2.1.0",
     "@pinia/nuxt": "^0.1.8",
     "cookie-universal-nuxt": "^2.1.5",
+    "murmurhash-es": "^0.1.1",
     "pinia": "^2.0.12"
   }
 }
