feat: begin home page with section top album

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxt/ui-templates": "npm:@nuxt/ui-templates-edge@0.0.0-27455683.83d2457",
     "@nuxtjs/proxy": "^2.1.0",
     "@pinia/nuxt": "^0.1.8",
+    "colorthief": "^2.3.2",
     "cookie-universal-nuxt": "^2.1.5",
     "murmurhash-es": "^0.1.1",
     "pinia": "^2.0.12"
