--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@unocss/preset-web-fonts": "^0.29.3",
     "@vueuse/core": "^8.1.1",
     "@vueuse/nuxt": "^8.1.1",
-    "buffer": "^6.0.3",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.4",
+    "node-vibrant": "^3.1.6",
     "nuxt3": "latest"
   },
   "dependencies": {
@@ -25,7 +25,6 @@
     "@nuxt/ui-templates": "npm:@nuxt/ui-templates-edge@0.0.0-27455683.83d2457",
     "@nuxtjs/proxy": "^2.1.0",
     "@pinia/nuxt": "^0.1.8",
-    "colorthief": "^2.3.2",
     "cookie-universal-nuxt": "^2.1.5",
     "murmurhash-es": "^0.1.1",
     "pinia": "^2.0.12"
