fix: replace npm by yarn

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "0.0.0-insiders.2dbc38c",
-    "@nuxt/ui-templates": "npm:@nuxt/ui-templates-edge@0.0.0-27455683.83d2457",
+    "@nuxt/kit": "npm:@nuxt/kit-edge@latest",
     "@nuxtjs/proxy": "^2.1.0",
     "@pinia/nuxt": "^0.1.8",
     "cookie-universal-nuxt": "^2.1.5",
