--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/nuxt": "^8.1.1",
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^2.0.4",
+    "motion": "^10.7.0",
     "node-vibrant": "^3.1.6",
     "nuxt3": "latest"
   },
