--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@unocss/preset-mini": "^0.29.3",
     "@unocss/preset-uno": "^0.29.3",
     "@unocss/preset-web-fonts": "^0.29.3",
+    "@unocss/transformer-variant-group": "^0.29.5",
     "@vueuse/core": "^8.1.1",
     "@vueuse/nuxt": "^8.1.1",
     "http-proxy": "^1.18.1",
