--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxtjs/proxy": "^2.1.0",
     "@pinia/nuxt": "^0.1.8",
     "cookie-universal-nuxt": "^2.1.5",
+    "date-fns": "^2.28.0",
     "murmurhash-es": "^0.1.1",
     "pinia": "^2.0.12"
   }
